Added sass support

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="theme-color" content="#434343">
-		<title>Webpack Boilerplate</title>
+		<title>Webpack React Template</title>
 	</head>
 	<body>
 		<content id="AppContainer"></content>
